--- a/gb/20/2/6/n11847578.md
+++ b/gb/20/2/6/n11847578.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】300记者进驻疫区 中共升级舆论战</h2>
-<a href="https://d1ogsjff5jad5d.cloudfront.net/E1gJwbKBl"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d259d2wq6kf78s.cloudfront.net/D6uJwbKBy"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>武汉将遭军管、病患达六位数？新证据再揭中共隐匿疫情；中共对台湾“木马屠城”？300记者入湖北 舆论维稳全面升级。（大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2020年02月06日讯】大家好，我是唐浩，今天都好吗？</p>
 <h3>⊙Opening</h3>
-<p>今天我们要继续跟大家聊<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>病毒（俗称新型冠状病毒）肺炎的疫情。主要跟大家探讨几个重点，包括：<br />
-?重点一：医院秘密视频 再揭<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>隐瞒疫情<br />
+<p>今天我们要继续跟大家聊<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>病毒（俗称新型冠状病毒）肺炎的疫情。主要跟大家探讨几个重点，包括：<br />
+?重点一：医院秘密视频 再揭<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>隐瞒疫情<br />
 ?重点二：机密报告 披露医院真实疫情<br />
 ?重点三：300记者进驻湖北疫区 重兵升级舆论战<br />
-?重点四：数十名中国人偷渡 中共对<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>“木马屠城”？</p>
+?重点四：数十名中国人偷渡 中共对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>“木马屠城”？</p>
 <p>目前中国疫情仍在持续扩大，到2月5日为止，中国境内已经有34个城市祭出“封城”措施。而美国白宫也表示，将竭尽全力帮助中国人民遏制病毒疫情。</p>
-<p><center><a src=""></a><a href="https://d1ogsjff5jad5d.cloudfront.net/E1gJwbKBl"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/0n1amINya7I?list=PLM8fYlVFBOetxdN6-tr8l7qiPLM22JUMd" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>此外，有最新的爆料录音指称说，武汉将被军方接手管治，同时感染病毒的实际人数应该达到六位数以上，因此现在武汉准备增加三个地点盖医院。不过这项消息，还有待进一步证实。</p>
+<p><center><a src=""></a><a href="https://d259d2wq6kf78s.cloudfront.net/D6uJwbKBy"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/0n1amINya7I?list=PLM8fYlVFBOetxdN6-tr8l7qiPLM22JUMd" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>此外，有最新的爆料录音指称说，武汉将被军方接手管治，同时感染病毒的实际人数应该达到六位数以上，因此现在武汉准备增加三个地点盖医院。不过这项消息，还有待进一步证实。</p>
 <p>另外，有中国网友跟我们反馈说，国内的防疫物资依然缺乏。有人说：“从（1月）21号到现在，一个口罩都没买到，现在一个一次性口罩都要卖7到9块钱。”</p>
 <p>也有人说，“我现在的情况是出门强制要戴口罩，然而并没有办法获取口罩。”</p>
 <p>也有一位来自武汉、目前人在日本的朋友说，“即使我自己一个人过得安安稳稳，但是我认识的朋友亲人都在受难，真的不是滋味。这个时候，我才感受到了一个民主的政府才能真正满足我的诉求。但是我并不能改变什么，只能寄希望在人民，通过这次天灾看清楚独裁体制的危害，改变体制。”</p>
@@ -47,7 +47,7 @@
 四、将民怨焦点从“中共抗疫不力”移转到“敌对势力阴谋论”，挑起民族主义情绪来冲淡民怨，分散中共政治风险。<br />
 五、 扩大发动网军、五毛、小粉红，对海内外进行网络造势、言论清洗和舆论攻击。</p>
 <p>只是，我们想提醒中共一个简单的事实：病毒不是在网络上或手机上，是在中国人民的日常生活里；病毒没有国籍，却每天都在夺走中国百姓的生命。中共是要动用大量资源与人力去帮助百姓对抗夺命病毒？还是要用这些资源与人力，来对抗虚构的“敌对势力”与中国百姓？</p>
-<h2>重点四：数十名中国人偷渡 中共对<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>“木马屠城”？</h2>
+<h2>重点四：数十名中国人偷渡 中共对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>“木马屠城”？</h2>
 <p>我们在上周的节目里，跟大家提过，中共阻挠武汉台湾人撤回台湾，有三个原因：1）俘虏政治人质，报复大选惨败；2）制造疫情，嫁祸台湾政府；3）为红色代理人创造政治资本。</p>
 <p>在2月3日深夜，第一批滞留武汉的台湾人搭机回到台湾，隔天果然就有媒体宣称某政党的“七人小组”是最大功臣，化解了蔡英文政府与中方沟通不良的困境。</p>
 <p>不过，稍后证实，机上有一名台商确诊感染肺炎；接着又传出这次回来的247人当中，有几十人不是台湾本地人；而且这名确诊肺炎的台商，本来也不在第一批的救援名单上，让人匪夷所思。</p>
@@ -72,42 +72,42 @@
 暮沉西山百花落<br />
 中南朝败祸未央<br />
 民醒正气邪党破</p>
-<p>大纪元《<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%e4%b8%96%e7%95%8c%e5%8d%81%e5%ad%97%e8%b7%af%e5%8f%a3.md#1">世界十字路口</a>》制作组</p>
+<p>大纪元《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%e4%b8%96%e7%95%8c%e5%8d%81%e5%ad%97%e8%b7%af%e5%8f%a3.md#1">世界十字路口</a>》制作组</p>
 <p>责任编辑：李昊 #</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/1/23/n11816092.md#1">【十字路口】中共肺炎3大风险恐加速疫情蔓延</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/1/27/n11824118.md#1">【十字路口】中共维稳助长肺炎病毒蔓延</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/1/28/n11826504.md#1">【十字路口】武汉疫情现场直击 4月病患恐暴增</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/1/30/n11831089.md#1">【十字路口】武汉火葬场烧不停？病毒藏诡异</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/23/n11816092.md#1">【十字路口】中共肺炎3大风险恐加速疫情蔓延</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/27/n11824118.md#1">【十字路口】中共维稳助长肺炎病毒蔓延</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/28/n11826504.md#1">【十字路口】武汉疫情现场直击 4月病患恐暴增</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/30/n11831089.md#1">【十字路口】武汉火葬场烧不停？病毒藏诡异</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/22/n12052901.md#1">分析：金正恩残废或病故 中共恶梦将成真</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/21/n12050056.md#1">中共发言人急于推卸国际追责 搞出乌龙</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/22/n12050955.md#1">【拍案惊奇】谁接班金正恩？传习在秦岭探军工</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/22/n12051023.md#1">中山校长：威胁国安的人来校分享 我痛心疾首！</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/21/n12049919.md#1">消息：美国准备金正恩去世后的应对计划</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/20/n12046904.md#1">卡卡捧谭德塞遭批 其母亲与WHO关系被起底</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/21/n12050674.md#1">郎朗参加全球抗疫音乐会 国籍标注美国引热议</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/22/n12053302.md#1">三月大婴儿趴睡死亡 马伊琍斥：专家是刽子手</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/20/n12046991.md#1">隔离14天胖到80公斤 陈伟霆：快崩溃</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/23/n12054555.md#1">周扬青认分手 亲揭罗志祥这些年花心不断</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/22/n12051978.md#1">印度专家：5000年前文献“预言”中共病毒</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/19/n12044305.md#1">宝玉和黛玉的人间再相逢</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/2/18/n3803627.md#1">米开朗基罗（5）《圣家族》</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/6/n12008574.md#1">人的善恶功过是能秤出重量的</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/20/4/19/n12043816.md#1">应运出世? 华盛顿佩剑出征</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/6/n11847578.htm">【十字路口】300记者进驻疫区 中共升级舆论战</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/6/n11847578.htm">【十字路口】300记者进驻疫区 中共升级舆论战</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/20/2/6/n11847578.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/2/6/n11847578.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
